# Gauss_Method

./: CMakeLists.txt  Makefile  README.md  frac.hpp  functions.hpp  input.hpp  main.cpp  matrix.hpp  test.py  tools.hpp
